<resources>
    <!-- REST API Server URLs -->
    <string name="grpc_host" translatable="false">165.246.42.173</string>
    <string name="grpc_port" translatable="false">50051</string>
    <string name="campaign_id" translatable="false">4</string>
    <string name="app_name" translatable="false">YouNoOne</string>
    <string name="dummy" translatable="false">Dummy</string>
    <string name="default_notification_channel_id" translatable="false">ema_notif_channel_id</string>
    <string name="version">version 1.2.5</string>
    <string name="status_today">Status for today:</string>
    <string name="authentication_txt">Authentication</string>
    <string name="authentication_btn">Authenticate</string>
    <string name="ema_explanation"><b>From the last survey to the present</b> Please indicate the degree corresponding to the following problem from 1-5.\n
        * 1 (not applicable at all) to 5 (very applicable)</string>
    <string name="ema_question_1">1. Little interest or pleasure in doing things</string>
    <string name="ema_question_2">2. Feeling down, depressed, or hopeless</string>
    <string name="ema_question_3">3. Trouble falling or staying asleep, or sleeping too much </string>
    <string name="ema_question_4">4. Feeling tired or having little energy</string>
    <string name="ema_question_5">5. Poor appetite or overeating</string>
    <string name="ema_question_6">6. Seeing yourself negatively or thinking you are a loser</string>
    <string name="ema_question_7">7. Difficulty focusing on work</string>
    <string name="ema_question_8">8. Moving or talking too slowly or too much</string>
    <string name="ema_question_9">9. Thoughts that you would be better off dead, or thoughts of hurting yourself in some way</string>
    <string name="submit">Submit</string>
    <string name="notif_channel_id" translatable="false">YouNoOne_notif_chanel</string>
    <string name="daily_notif_text">Hey there! Please, fill in the questionnaire :)</string>
    <string name="smartphone" translatable="false">smartphone</string>
    <string name="uploading">Uploading…</string>
    <string name="noti_service_running">Service is running…</string>
    <string name="noti_data_submission_running">Data is submitting…</string>
    <string name="day_num">Duration: %1$d day</string>
    <string name="day_num_holder">Duration: </string>
    <string name="ema_responses_holder">EMA responses:</string>
    <string name="ema_responses_rate">EMA responses: %1$d/4</string>
    <string name="data_loaded">Data loaded:  %1$s</string>
    <string name="data_loaded_holder">Data loaded: </string>
    <string name="last_active">Last active:  %1$s</string>
    <string name="last_active_holder">Last active: </string>
    <string name="restart_data_collection">Restart service</string>
    <string name="set_locations">Set locations</string>
    <string name="service_running">Service: Running :)</string>
    <string name="service_stopped">Service: Not running :(</string>
    <string name="internet_on">Internet: Connected :)</string>
    <string name="internet_off">Internet: Not connected :(</string>
    <string name="log_out">Log out</string>
    <string name="set_home_location">Home</string>
    <string name="set_work_location">Workplace</string>
    <string name="set_university_location">University</string>
    <string name="set_library_location">Library</string>
    <string name="set_additional_location">Other place</string>
    <string name="locations_set_instruction">Place the pin where you want it on the map and press the corresponding place button to set the place.</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
    <string name="location_removed">Location has been removed!</string>
    <string name="location_remove_confirmation">Are you sure you want to remove this location?</string>
    <string name="location_set"> location has been set!</string>
    <string name="location_set_confirmation">Are you sure it\'s your \"%1$s\" location?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="grant_permissions">Please, grant permissions or turn on locations!</string>
    <string name="permissions">Permissions</string>
    <string name="answer_last_ema">answer last EMA</string>
    <string name="loading_the_map">Loading the map…</string>
    <string name="please_wait">Please wait…</string>
    <string name="_10_00">10:00</string>
    <string name="_14_00">14:00</string>
    <string name="_18_00">18:00</string>
    <string name="_22_00">22:00</string>
    <string name="setting_locations">Setting locations</string>
    <string name="yessss">YESSSS</string>
    <string name="earned_rewards">Reward and Bonus</string>
    <string name="you_earned">You\'ve earned</string>
    <string name="reward_image" translatable="false">reward image</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="close_image" translatable="false">close image</string>
    <string name="earned_points">Earned reward %1$d ₩</string>
    <string name="plus_earned_points">+%1$d ₩</string>
    <string name="total_reward_with_bonus">Total %1$d ₩</string>
    <string name="currently_earned_points">Currently earned points</string>
    <string name="bonus_points">Bonus %1$d ₩</string>
    <string name="error_cannot_write" translatable="false">Cannot write image captured by camera.</string>
    <string name="error_cannot_open" translatable="false">Cannot open camera.</string>
    <string name="error_cannot_get_permission" translatable="false">Camera permission not available.</string>
    <string name="error_not_having_camera" translatable="false">Your device does not have front camera.</string>
    <string name="error_camera_permission_denied" translatable="false">Camera permission denied.</string>
    <string name="btn_tittle_capture_image">Capture image</string>
    <string name="set_social_media">SNS</string>
    <string name="submitSNS">Submit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="toast_username_password_empty">Username and password cannot be empty!</string>
    <string name="toast_username_empty"> Username cannot be empty!</string>
    <string name="toast_password_empty"> Password cannot be empty!</string>
    <string name="toast_success_login">Successfully logged in</string>
    <string name="toast_username_password_check">Check your username, password and try again.</string>
    <string name="toast_check_internet">Check Internet connection</string>
    <string name="instagram_loggedin_as">You are currently logged in as: </string>
    <string name="response_saved">Response saved</string>
    <string name="saved_images">Photos</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="home_drawer_layout">Home</string>
    <string name="general_drawer_layout">General</string>
    <string name="smartwatch">Smartwatch</string>
    <string name="smartwatch_connected">Smartwatch: ON</string>
    <string name="smartwatch_not_connected">Smartwatch: OFF</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="ready_to_accept_connection">Ready to accept connection</string>
    <string name="device_connected">Device connected =)</string>
    <string name="agent_unavailable">Agent unavailable</string>
    <string name="failed_to_get_agent">Failed to get agent</string>
    <string name="watch_phone">Watch -> Phone</string>
    <string name="amount_of_samples">Amount of samples</string>
    <string name="phone_server">Phone -> Server</string>
    <string name="status">STATUS: </string>
    <string name="actions_history">Actions history</string>
    <string name="failed_to_initialize">Failed to initialize, please reopen!</string>
    <string name="watch_connection_success">Smartwatch connection established</string>
    <string name="watch_connection_exists">Smartwatch connection already exists</string>
    <string name="answer">Answer</string>
    <string name="ema_message">Hey there! Please, fill in the survey :)</string>
    <string name="ema_title">Time to answer EMA!</string>
    <string name="time_is_up">Sorry, you only have 1 hour to answer. Time is up!</string>
    <string name="successfully_authorized">Successfully connected to the EasyTrack!</string>
    <string name="et_not_started">EasyTrack campaign has not started. Campaign start time is: </string>
    <string name="et_error">An error occurred when connecting to the EasyTrack campaign. Please try again later!</string>
    <string name="canceled">Canceled</string>
    <string name="technical_issue">Technical issue. Please check your internet connectivity and try again!</string>
    <string name="install_et">Please install the EasyTrack Authenticator and reopen the application!</string>
    <string name="ago">ago</string>
    <string name="younoone_notif_channel">YouNoOne notification channel</string>
    <string name="younoone_notif_channel_data_submission">YouNoOne notification channel data submission</string>
    <string name="channel_description">This channel is used to deliver notifications from YouNoOne application</string>
    <string name="min">min</string>
    <string name="hour">h</string>
    <string name="days">days</string>
    <string name="connect_internet_first_launch">"Please connect to the Internet for the first launch!"</string>
    <string name="continue_btn">Continue</string>
    <string name="welcome">Welcome to YouNoOne</string>
    <string name="thank_you">Thank you for participating!</string>
    <string name="ask_for_permissions">Please give all permissions for data collection</string>
    <string name="lte">LTE </string>
    <string name="lte_enabled_toast">You enabled using LTE for data submission</string>
    <string name="lte_disabled_toast">You disabled using LTE for data submission</string>
    <string name="send_data">Send data</string>
    <string name="data_submit_success">Submitted successfully!</string>
    <string name="try_again">Error occurred, try  again!</string>
    <string name="submit_to_google_drive">Submitting to Google Drive</string>
    <string name="submit_in_progress">in progress…</string>
    <string name="check_internet">Please check your Internet connection</string>
    <string name="file_empty">File is empty. Try again later</string>

</resources>