<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutEmaDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@color/transparent"
    android:padding="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEmaDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ema_alertdialog_background"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/emaAlertTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ema_alertdialog_title_background"
            android:padding="10dp"
            android:text="@string/ema_title"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/emaAlertImageIcon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@id/emaAlertTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/emaAlertTitle"
            app:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/emaAlertMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:text="@string/ema_message"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emaAlertTitle" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/emaAlertButtonCancel"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_ema_cancel_background"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/layoutEmaDialog"
        app:layout_constraintEnd_toStartOf="@+id/emaAlertButtonAnswer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEmaDialog" />

    <Button
        android:id="@+id/emaAlertButtonAnswer"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_ema_answer_background"
        android:text="@string/answer"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/layoutEmaDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/emaAlertButtonCancel"
        app:layout_constraintTop_toBottomOf="@id/layoutEmaDialog" />


</androidx.constraintlayout.widget.ConstraintLayout>